correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -8,7 +8,7 @@
 	border-style: solid;
 }
 
-.timetable tr:not(inner-row){
+.timetable tr{
 	font-size: 9px;
 	color: #003333;
 	font-weight:bold;
@@ -16,6 +16,7 @@
 	text-align: left;
 	margin: 0px;
 	padding: 0px;
+	border: 0px;
 }
 
 .timetable th{
